--- a/weinbestellung/weinbestellung_de.html
+++ b/weinbestellung/weinbestellung_de.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wine Order EN</title>
+    <title>Weinbestellung DE</title>
     <link rel="stylesheet" href="weinbestellung.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../css/lang_select.css" />
     <link
@@ -33,32 +35,32 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÜ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
-    </section>
+    </section>    
 
     <div class="modal" id="myModal">
       <span class="close" id="closeModal">&times;</span>
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index_en.html">Home</a></li>
-            <li><a href="../About/index_en.html">About us</a></li>
+            <li><a href="../Home/index_de.html">Startseite</a></li>
+            <li><a href="../About/index_de.html">Über uns</a></li>
             <li>
-              <a href="../wines/index_en.html">Wines</a>
+              <a href="../wines/index_de.html">Weine</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="#">Order Wine</a></li>
-            <li><a href="../Gallery/index_en.html">Gallery</a></li>
-            <li><a href="../Contact Us/index_en.html">Contact</a></li>
+            <li><a href="#">Wein bestellen</a></li>
+            <li><a href="../Gallery/index_de.html">Galerie</a></li>
+            <li><a href="../Contact Us/index_de.html">Kontakt</a></li>
           </ul>
         </nav>
       </div>
-    </div>
+    </div>    
 
     <div class="modal" id="secondModal">
       <span class="close" id="closeSecondModal">&times;</span>
@@ -67,16 +69,16 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Zurück
           </a>
           <ul>
-            <li><a href="../wines/Details/Malbec/index_en.html">Malbec</a></li>
-            <li><a href="../wines/Details/Merlot/index_en.html">Merlot</a></li>
+            <li><a href="../wines/Details/Malbec/index_de.html">Malbec</a></li>
+            <li><a href="../wines/Details/Merlot/index_de.html">Merlot</a></li>
             <li>
-              <a href="../wines/Details/Torrentes/index_en.html">Torrentes</a>
+              <a href="../wines/Details/Torrentes/index_de.html">Torrentes</a>
             </li>
             <li>
-              <a href="../wines/Details/GranNevado/index_en.html">Gran Nevado</a>
+              <a href="../wines/Details/GranNevado/index_de.html">Gran Nevado</a>
             </li>
           </ul>
         </nav>
@@ -85,84 +87,85 @@
     <div class="container">
       <div class="grid-container">
         <div class="left-section">
-          <h2>Order:</h2>
+          <h2>Bestellung:</h2>
           <p>
-            Here you have the opportunity to order our wines. (*=Required fields)
+            Hier haben Sie die Möglichkeit unsere Weine zu bestellen.
+            (*=Pflichtfelder)
           </p>
 
-          <label for="email">Email*</label>
+          <label for="email">E-Mail*</label>
           <input
             type="email"
             id="email"
             name="email"
             required
-            placeholder="Email Address*"
+            placeholder="E-Mail Addresse*"
           />
 
-          <label for="name">Name and Surname*</label>
+          <label for="name">Name und Vorname*</label>
           <input
             type="text"
             id="name"
             name="name"
             required
-            placeholder="Name and Surname*"
+            placeholder="Name und Vorname*"
           />
 
-          <label for="plz">Postal Code*</label>
+          <label for="plz">PLZ*</label>
           <input
             type="number"
             id="plz"
             name="plz"
             required
-            placeholder="Postal Code*"
+            placeholder="PLZ*"
           />
 
-          <label for="land">Country*</label>
+          <label for="land">Land*</label>
           <input
             type="text"
             id="land"
             name="land"
             required
-            placeholder="Country*"
+            placeholder="Land*"
           />
 
-          <label for="telefon_geschaftlich">Phone (business)</label>
+          <label for="telefon_geschaftlich">Telefon (geschäftlich)</label>
           <input
             type="tel"
             id="telefon_geschaftlich"
             name="telefon_geschaftlich"
-            placeholder="Business Phone"
+            placeholder="Telefon G"
           />
         </div>
 
         <div class="right-section">
-          <label for="address">Address*</label>
+          <label for="address">Addresse*</label>
           <input
             type="text"
             id="address"
             name="address"
             required
-            placeholder="Address*"
+            placeholder="Addresse*"
           />
 
-          <label for="ort">City*</label>
-          <input type="text" id="ort" name="ort" required placeholder="City*" />
+          <label for="ort">Ort*</label>
+          <input type="text" id="ort" name="ort" required placeholder="Ort*" />
 
-          <label for="telefon_privat">Phone (private)</label>
+          <label for="telefon_privat">Telefon (privat)</label>
           <input
             type="tel"
             id="telefon_privat"
             name="telefon_privat"
-            placeholder="Private Phone"
+            placeholder="Telefon Privat"
           />
 
-          <label for="handy">Mobile</label>
+          <label for="handy">Handy</label>
           <input
             type="tel"
             id="handy"
             name="handy"
             required
-            placeholder="Mobile Phone"
+            placeholder="Telefon Mobile"
           />
         </div>
       </div>
@@ -171,33 +174,33 @@
     <div class="container second">
       <div class="grid-container">
         <div class="left">
-          <p><strong>Wine Order*</strong></p>
+          <p><strong>Weinbestellung*</strong></p>
 
           <div>
             <input class="radio-btn" type="radio" name="malbec" value="1" />1
-            Box Malbec (CHF, 141.-)<br />
-            <input class="radio-btn" type="radio" name="malbec" value="2" />2
-            Boxes Malbec (CHF, 282.-)<br />
-            <input class="radio-btn" type="radio" name="malbec" value="3" />3
-            Boxes Malbec (CHF, 423.-)<br />
+            Karton Malbec (CHF, 141.-)<br />
+            <input class="radio-btn" type="radio" name="malbec" value="2" />1
+            Karton Malbec (CHF, 282.-)<br />
+            <input class="radio-btn" type="radio" name="malbec" value="3" />1
+            Karton Malbec (CHF, 423.-)<br />
           </div>
 
           <div>
             <input class="radio-btn" type="radio" name="merlot" value="1" />1
-            Box Merlot (CHF, 150.-)<br />
-            <input class="radio-btn" type="radio" name="merlot" value="2" />2
-            Boxes Merlot (CHF, 300.-)<br />
-            <input class="radio-btn" type="radio" name="merlot" value="3" />3
-            Boxes Merlot (CHF, 450.-)<br />
+            Karton Merlot (CHF, 150.-)<br />
+            <input class="radio-btn" type="radio" name="merlot" value="2" />1
+            Karton Merlot (CHF, 300.-)<br />
+            <input class="radio-btn" type="radio" name="merlot" value="3" />1
+            Karton Merlot (CHF, 450.-)<br />
           </div>
 
           <div>
             <input class="radio-btn" type="radio" name="torrontes" value="1" />1
-            Box Torrontés (CHF, 99.-)<br />
-            <input class="radio-btn" type="radio" name="torrontes" value="2" />2
-            Boxes Torrontés (CHF, 198.-)<br />
-            <input class="radio-btn" type="radio" name="torrontes" value="3" />3
-            Boxes Torrontés (CHF, 297.-)<br />
+            Karton Torrontés (CHF, 99.-)<br />
+            <input class="radio-btn" type="radio" name="torrontes" value="2" />1
+            Karton Torrontés (CHF, 198.-)<br />
+            <input class="radio-btn" type="radio" name="torrontes" value="3" />1
+            Karton Torrontés (CHF, 297.-)<br />
           </div>
 
           <div>
@@ -206,58 +209,58 @@
               type="radio"
               name="granNevado"
               value="1"
-            />1 Box Gran Nevado (CHF, 210.-)<br />
+            />1 Karton Gran Nevado (CHF, 210.-)<br />
             <input
               class="radio-btn"
               type="radio"
               name="granNevado"
               value="2"
-            />2 Boxes Gran Nevado (CHF, 420.-)<br />
+            />1 Karton Gran Nevado (CHF, 420.-)<br />
             <input
               class="radio-btn"
               type="radio"
               name="granNevado"
               value="3"
-            />3 Boxes Gran Nevado (CHF, 360.-)<br />
+            />1 Karton Gran Nevado (CHF, 360.-)<br />
           </div>
           <h6>
-            Delivery Conditions: Delivery against invoice, payable in 30 days.
+            Lieferkonditiones: Lieferung gegen Rechnung, zahlbar in 30 Tagen.
           </h6>
           <label>
             <input type="checkbox" id="checkbox" />
-            We agree to your delivery conditions.
+            Wir sind mit Ihren Lieferkonditionen einverstanden.
           </label>
         </div>
         <div class="right">
-          <p><strong>Price per Box (1 Box = 6 Bottles):</strong></p>
+          <p><strong>Precise pro Karton (1 Karton = 6 Flaschen):</strong></p>
           <p>Malbec (CHF 141.-) | Merlot(CHF 150.-)</p>
           <p>Torrontés (CHF 99.-) | Gran Nevado(CHF 210.-)</p>
           <br />
           <br />
-          <p><strong>Shipping Info:</strong></p>
-          <p>1 Box CHF 9.-;2 Boxes CHF 12.-;3 Boxes CHF 15.-</p>
-          <p>Free delivery for orders over CHF 300.-</p>
+          <p><strong>Versandinfo:</strong></p>
+          <p>1 Karton CHF 9.-;2 Kartons CHF 12.-;3 Kartons CHF 15.-</p>
+          <p>Gratislieferung ab einem Bestellwert von CHF 300.-</p>
           <br />
           <br />
-          <p><strong>Message:</strong></p>
+          <p><strong>Nachricht:</strong></p>
           <textarea
-            name="Message"
+            name="Nachricht"
             id=""
             cols="40"
             rows="7"
-            placeholder="Message"
+            placeholder="Nachricht"
           ></textarea>
         </div>
       </div>
     </div>
     <div class="container third">
       <div class="button">
-        <button class="btn">Send</button>
+        <button class="btn">Senden</button>
       </div>
     </div>
     <section class="footer">
       <p>
-        Vinos Adentro 2685 meters above sea level <br />
+        Vinos Adentro 2685 above sea level <br />
         Cachi/Argentina
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
