--- a/weinbestellung/weinbestellung_es.html
+++ b/weinbestellung/weinbestellung_es.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wine Order EN</title>
+    <title>Pedido de Vino ES</title>
     <link rel="stylesheet" href="weinbestellung.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../css/lang_select.css" />
@@ -33,7 +33,7 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÚ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index_en.html">Home</a></li>
-            <li><a href="../About/index_en.html">About us</a></li>
+            <li><a href="../Home/index_es.html">Inicio</a></li>
+            <li><a href="../About/index_es.html">Sobre nosotros</a></li>
             <li>
-              <a href="../wines/index_en.html">Wines</a>
+              <a href="../wines/index_es.html">Vinos</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="#">Order Wine</a></li>
-            <li><a href="../Gallery/index_en.html">Gallery</a></li>
-            <li><a href="../Contact Us/index_en.html">Contact</a></li>
+            <li><a href="#">Pedir Vino</a></li>
+            <li><a href="../Gallery/index_es.html">Galería</a></li>
+            <li><a href="../Contact Us/index_es.html">Contacto</a></li>
           </ul>
         </nav>
       </div>
@@ -67,16 +67,16 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Atrás
           </a>
           <ul>
-            <li><a href="../wines/Details/Malbec/index_en.html">Malbec</a></li>
-            <li><a href="../wines/Details/Merlot/index_en.html">Merlot</a></li>
+            <li><a href="../wines/Details/Malbec/index_es.html">Malbec</a></li>
+            <li><a href="../wines/Details/Merlot/index_es.html">Merlot</a></li>
             <li>
-              <a href="../wines/Details/Torrentes/index_en.html">Torrentes</a>
+              <a href="../wines/Details/Torrentes/index_es.html">Torrentes</a>
             </li>
             <li>
-              <a href="../wines/Details/GranNevado/index_en.html">Gran Nevado</a>
+              <a href="../wines/Details/GranNevado/index_es.html">Gran Nevado</a>
             </li>
           </ul>
         </nav>
@@ -85,84 +85,84 @@
     <div class="container">
       <div class="grid-container">
         <div class="left-section">
-          <h2>Order:</h2>
+          <h2>Pedido:</h2>
           <p>
-            Here you have the opportunity to order our wines. (*=Required fields)
+            Aquí tienes la oportunidad de pedir nuestros vinos. (*=Campos obligatorios)
           </p>
 
-          <label for="email">Email*</label>
+          <label for="email">Correo Electrónico*</label>
           <input
             type="email"
             id="email"
             name="email"
             required
-            placeholder="Email Address*"
+            placeholder="Dirección de correo electrónico*"
           />
 
-          <label for="name">Name and Surname*</label>
+          <label for="name">Nombre y Apellido*</label>
           <input
             type="text"
             id="name"
             name="name"
             required
-            placeholder="Name and Surname*"
+            placeholder="Nombre y Apellido*"
           />
 
-          <label for="plz">Postal Code*</label>
+          <label for="plz">Código Postal*</label>
           <input
             type="number"
             id="plz"
             name="plz"
             required
-            placeholder="Postal Code*"
+            placeholder="Código Postal*"
           />
 
-          <label for="land">Country*</label>
+          <label for="land">País*</label>
           <input
             type="text"
             id="land"
             name="land"
             required
-            placeholder="Country*"
+            placeholder="País*"
           />
 
-          <label for="telefon_geschaftlich">Phone (business)</label>
+          <label for="telefon_geschaftlich">Teléfono (negocios)</label>
           <input
             type="tel"
             id="telefon_geschaftlich"
             name="telefon_geschaftlich"
-            placeholder="Business Phone"
+            placeholder="Teléfono de Negocios"
           />
         </div>
 
         <div class="right-section">
-          <label for="address">Address*</label>
+          <label for="address">Dirección*</label>
           <input
             type="text"
             id="address"
             name="address"
             required
-            placeholder="Address*"
+            placeholder="Dirección*"
           />
 
-          <label for="ort">City*</label>
-          <input type="text" id="ort" name="ort" required placeholder="City*" />
+          <label for="ort">Localidad*</label>
+          <input type="text" id="ort" name="ort" required placeholder="Localidad*" />
 
-          <label for="telefon_privat">Phone (private)</label>
+          <label for="telefon_privat">Teléfono (privado)</label>
           <input
             type="tel"
             id="telefon_privat"
             name="telefon_privat"
-            placeholder="Private Phone"
+            placeholder="Teléfono Privado"
           />
 
-          <label for="handy">Mobile</label>
+          <label for="handy">Móvil</label>
           <input
             type="tel"
             id="handy"
             name="handy"
             required
-            placeholder="Mobile Phone"
+            placeholder="Teléfono Móvil"
           />
         </div>
       </div>
@@ -171,33 +171,33 @@
     <div class="container second">
       <div class="grid-container">
         <div class="left">
-          <p><strong>Wine Order*</strong></p>
+          <p><strong>Pedido de Vino*</strong></p>
 
           <div>
             <input class="radio-btn" type="radio" name="malbec" value="1" />1
-            Box Malbec (CHF, 141.-)<br />
+            Caja de Malbec (CHF, 141.-)<br />
             <input class="radio-btn" type="radio" name="malbec" value="2" />2
-            Boxes Malbec (CHF, 282.-)<br />
+            Cajas de Malbec (CHF, 282.-)<br />
             <input class="radio-btn" type="radio" name="malbec" value="3" />3
-            Boxes Malbec (CHF, 423.-)<br />
+            Cajas de Malbec (CHF, 423.-)<br />
           </div>
 
           <div>
             <input class="radio-btn" type="radio" name="merlot" value="1" />1
-            Box Merlot (CHF, 150.-)<br />
+            Caja de Merlot (CHF, 150.-)<br />
             <input class="radio-btn" type="radio" name="merlot" value="2" />2
-            Boxes Merlot (CHF, 300.-)<br />
+            Cajas de Merlot (CHF, 300.-)<br />
             <input class="radio-btn" type="radio" name="merlot" value="3" />3
-            Boxes Merlot (CHF, 450.-)<br />
+            Cajas de Merlot (CHF, 450.-)<br />
           </div>
 
           <div>
             <input class="radio-btn" type="radio" name="torrontes" value="1" />1
-            Box Torrontés (CHF, 99.-)<br />
+            Caja de Torrontés (CHF, 99.-)<br />
             <input class="radio-btn" type="radio" name="torrontes" value="2" />2
-            Boxes Torrontés (CHF, 198.-)<br />
+            Cajas de Torrontés (CHF, 198.-)<br />
             <input class="radio-btn" type="radio" name="torrontes" value="3" />3
-            Boxes Torrontés (CHF, 297.-)<br />
+            Cajas de Torrontés (CHF, 297.-)<br />
           </div>
 
           <div>
@@ -206,58 +206,58 @@
               type="radio"
               name="granNevado"
               value="1"
-            />1 Box Gran Nevado (CHF, 210.-)<br />
+            />1 Caja de Gran Nevado (CHF, 210.-)<br />
             <input
               class="radio-btn"
               type="radio"
               name="granNevado"
               value="2"
-            />2 Boxes Gran Nevado (CHF, 420.-)<br />
+            />2 Cajas de Gran Nevado (CHF, 420.-)<br />
             <input
               class="radio-btn"
               type="radio"
               name="granNevado"
               value="3"
-            />3 Boxes Gran Nevado (CHF, 360.-)<br />
+            />3 Cajas de Gran Nevado (CHF, 360.-)<br />
           </div>
           <h6>
-            Delivery Conditions: Delivery against invoice, payable in 30 days.
+            Condiciones de Entrega: Entrega contra factura, pagadera en 30 días.
           </h6>
           <label>
             <input type="checkbox" id="checkbox" />
-            We agree to your delivery conditions.
+            Estamos de acuerdo con sus condiciones de entrega.
           </label>
         </div>
         <div class="right">
-          <p><strong>Price per Box (1 Box = 6 Bottles):</strong></p>
+          <p><strong>Precio por Caja (1 Caja = 6 Botellas):</strong></p>
           <p>Malbec (CHF 141.-) | Merlot(CHF 150.-)</p>
           <p>Torrontés (CHF 99.-) | Gran Nevado(CHF 210.-)</p>
           <br />
           <br />
-          <p><strong>Shipping Info:</strong></p>
-          <p>1 Box CHF 9.-;2 Boxes CHF 12.-;3 Boxes CHF 15.-</p>
-          <p>Free delivery for orders over CHF 300.-</p>
+          <p><strong>Información de Envío:</strong></p>
+          <p>1 Caja CHF 9.-; 2 Cajas CHF 12.-; 3 Cajas CHF 15.-</p>
+          <p>Envío gratuito para pedidos superiores a CHF 300.-</p>
           <br />
           <br />
-          <p><strong>Message:</strong></p>
+          <p><strong>Mensaje:</strong></p>
           <textarea
-            name="Message"
+            name="Mensaje"
             id=""
             cols="40"
             rows="7"
-            placeholder="Message"
+            placeholder="Mensaje"
           ></textarea>
         </div>
       </div>
     </div>
     <div class="container third">
       <div class="button">
-        <button class="btn">Send</button>
+        <button class="btn">Enviar</button>
       </div>
     </div>
     <section class="footer">
       <p>
-        Vinos Adentro 2685 meters above sea level <br />
+        Vinos Adentro a 2685 metros sobre el nivel del mar <br />
         Cachi/Argentina
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
